Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,13 @@
     "#def nearest_neighbors(first_neighbor, neighbors):\n",
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    nearestNeighbors = distance_all(first_neighbor, neighbors)\n",
-    "    return list(map(lambda nearestNeighbor: nearestNeighbor['distance'], nearestNeighbors))"
+    "    return list(map(lambda nearestNeighbor: nearestNeighbor['distance'], nearestNeighbors))\n",
+    "\n",
+    "restaurants = list(map(lambda restaurant: dict(name=restaurant['name'], \n",
+    "                                           price=restaurant['price'], \n",
+    "                                           is_closed=restaurant['is_closed'],\n",
+    "                                           review_count=restaurant['review_count'],\n",
+    "                                          ), yelp_restaurants))"
    ]
   },
   {
