--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
     "#def nearest_neighbors(first_neighbor, neighbors):\n",
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    nearestNeighbors = distance_all(first_neighbor, neighbors)\n",
-    "    return list(map(lambda nearestNeighbor: nearestNeighbor['distance'], nearestNeighbors))\n",
+    "    return list(map(lambda nearestNeighbor: dict(nearestNeighbor['distance']), nearestNeighbors))\n",
     "\n",
     "restaurants = list(map(lambda restaurant: dict(name=restaurant['name'], \n",
     "                                           price=restaurant['price'], \n",
